# data_driven_optimizer_guarantees

./: .gitignore  README.md  pinskers_visuals.py  pyproject.toml
benchmarks/: classical_run_and_bound.py  l2o_calibrate.py  l2o_train.py  l2ws_setup.py  l2ws_train.py  motivating_example.py  parametric_setup.py  plot.py  plot_genL2O.py  slurm_script_cpu.sh  slurm_script_gpu.sh
benchmarks/configs/mnist/: mnist_plot_custom.yaml  mnist_plot_fp.yaml  mnist_run.yaml  mnist_run_fp.yaml  mnist_setup.yaml
benchmarks/configs/quadcopter/: quadcopter_plot.yaml  quadcopter_run.yaml  quadcopter_setup.yaml
benchmarks/configs/robust_kalman/: robust_kalman_plot.yaml  robust_kalman_plot_custom.yaml  robust_kalman_plot_fp.yaml  robust_kalman_run.yaml  robust_kalman_run_custom.yaml  robust_kalman_run_fp.yaml  robust_kalman_setup.yaml
benchmarks/configs/sine/: sine_plot.yaml  sine_run.yaml  sine_run_calibrate.yaml
benchmarks/configs/sparse_coding/: sparse_coding_calibrate.yaml  (+2 more)
examples/: mnist.py
l2ws/: algo_steps.py  l2ws_model.py  launcher.py  osqp_model.py
l2ws/examples/: sine.py
opt_guarantees/: _version.py  algo_steps.py  alista_model.py  eg_model.py  gd_model.py  glista_model.py  ista_model.py  l2o_model.py  l2ws_model.py  launcher.py  lista_cpss_model.py  lista_model.py  maml_model.py  osqp_model.py  scs_model.py  scs_problem.py  tilista_model.py
opt_guarantees/examples/: lasso.py  mnist.py  quadcopter.py  robust_kalman.py  sine.py  solve_script.py  sparse_coding.py  sparse_pca.py  unconstrained_qp.py
opt_guarantees/utils/: mpc_utils.py  nn_utils.py
(+3 files in other folders)
